--- a/i3/config
+++ b/i3/config
@@ -13,10 +13,11 @@ set $mod Mod1
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:monospace 10
+font pango:monospace 12
 
 # wallpaper
 # exec --no-startup-id feh --bg-scale "~/Pictures/wallpapers/wallpaper.jpg"
+# feh --bg-fill "~/Pictures/YOGT.png"
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
