--- a/i3/config
+++ b/i3/config
@@ -91,9 +91,11 @@ bindsym $mod+Shift+Right move right
 
 # split in horizontal orientation
 # bindsym $mod+h split h
+bindsym $mod+c split h
 
 # split in vertical orientation
-bindsym $mod+v split v
+# bindsym $mod+v split v && exec --no-startup-id i3-dmenu-desktop
+bindsym $mod+v split v 
 
 # enter fullscreen mode for the focused container
 bindsym $mod+f fullscreen toggle
