update i3 config, update vimrc, add alacritty config, update .tmux.conf

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -35,11 +35,15 @@ bind l select-pane -R
 bind j select-pane -D
 bind k select-pane -U
 bind h select-pane -L
+bind c-l select-pane -R
+bind c-j select-pane -D
+bind c-k select-pane -U
+bind c-h select-pane -L
 
-bind -r c-h resize-pane -L 5
-bind -r c-j resize-pane -D 1
-bind -r c-k resize-pane -U 1
-bind -r c-l resize-pane -R 5
+bind -r H resize-pane -L 5
+bind -r J resize-pane -D 1
+bind -r K resize-pane -U 1
+bind -r L resize-pane -R 5
 
 # 在当前目录创建新窗口
 unbind-key c
