--- a/terminal/alacritty/alacritty.yml
+++ b/terminal/alacritty/alacritty.yml
@@ -174,7 +174,8 @@ draw_bold_text_with_bright_colors: true
 colors:
   # Default colors
   primary:
-    background: '0x000000'
+    # background: '0x000000'
+    background: '0x3c3f41'
     foreground: '0xeaeaea'
 
     # Bright and dim foreground colors
