--- a/wmde/i3/config
+++ b/wmde/i3/config
@@ -13,26 +13,12 @@ set $mod Mod1
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:monospace 14
+#font pango:DejaVu Sans Mono 12
+font pango:monospace 13
 
 # wallpaper
-# exec --no-startup-id feh --bg-scale "~/Pictures/wallpapers/wallpaper.jpg"
-exec --no-startup-id feh --bg-scale "~/Pictures/wallpapers/YOGT.png"
-# feh --bg-fill "~/Pictures/YOGT.png"
+exec --no-startup-id feh --bg-scale ~/Pictures/YOGT.png
 
-# copy-paste board
-# exec --no-startup-id clipit
-
-# This font is widely installed, provides lots of unicode glyphs, right-to-left
-# text rendering and scalability on retina/hidpi displays (thanks to pango).
-#font pango:DejaVu Sans Mono 8
-
-# Before i3 v4.8, we used to recommend this one as the default:
-# font -misc-fixed-medium-r-normal--13-120-75-75-C-70-iso10646-1
-# The font above is very space-efficient, that is, it looks good, sharp and
-# clear in small sizes. However, its unicode glyph coverage is limited, the old
-# X core fonts rendering does not support right-to-left and this being a bitmap
-# font, it doesn’t scale on retina/hidpi displays.
 
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
@@ -40,7 +26,6 @@ floating_modifier $mod
 #===programs shortcuts===
 
 # browsers--firefox chromium
-bindsym $mod+Shift+f exec firefox
 bindsym $mod+g exec google-chrome
 
 # start a terminal
@@ -61,17 +46,11 @@ bindsym $mod+m bar mode toggle
 
 # start dmenu (a program launcher)
 # bindsym $mod+d exec dmenu_run
-# There also is the (new) i3-dmenu-desktop which only displays applications
-# shipping a .desktop file. It is a wrapper around dmenu, so you need that
-# installed.
-# bindsym $mod+d exec --no-startup-id i3-dmenu-desktop
-bindsym $mod+space exec --no-startup-id i3-dmenu-desktop
+# bindsym $mod+space exec --no-startup-id i3-dmenu-desktop
+bindsym $mod+space exec --no-startup-id rofi -show drun
+
 
 # change focus
-# bindsym $mod+j focus left
-# bindsym $mod+k focus down
-# bindsym $mod+l focus up
-# bindsym $mod+semicolon focus right
 bindsym $mod+h focus left
 bindsym $mod+j focus down
 bindsym $mod+k focus up
