--- a/wmde/i3/config
+++ b/wmde/i3/config
@@ -14,10 +14,13 @@ set $mod Mod1
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
 #font pango:DejaVu Sans Mono 12
-font pango:monospace 13
+# font pango:monospace 13
+font pango: Noto Sans 3
 
-# wallpaper
+# autostart
 exec --no-startup-id feh --bg-scale ~/Pictures/YOGT.png
+exec --no-startup-id flameshot
+exec --no-startup-id compton -b
 
 
 # Use Mouse+$mod to drag floating windows to their wanted position
@@ -45,10 +48,8 @@ bindsym Mod1+F4 kill
 bindsym $mod+m bar mode toggle
 
 # start dmenu (a program launcher)
-# bindsym $mod+d exec dmenu_run
 # bindsym $mod+space exec --no-startup-id i3-dmenu-desktop
-bindsym $mod+space exec --no-startup-id rofi -show drun
-
+ bindsym $mod+space exec --no-startup-id rofi -lines 12 -padding 18 -width 60 -location 0 -show drun -sidebar-mode -columns 3
 
 # change focus
 bindsym $mod+h focus left
@@ -105,13 +106,10 @@ bindsym $mod+Shift+space floating toggle
 # focus the parent container
 bindsym $mod+a focus parent
 
-# focus the child container
-#bindsym $mod+d focus child
-
 
 # # switch to near workspace
-bindsym mod1+Shift+Tab workspace prev
-bindsym mod1+Tab workspace next
+bindsym mod4+Shift+Tab workspace prev
+bindsym mod4+Tab workspace next
 
 # switch to workspace
 bindsym $mod+1 workspace 1
@@ -173,5 +171,36 @@ bindsym $mod+r mode "resize"
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
 bar {
+    #     colors {
+    #     background #2f343f
+    #     statusline #2f343f
+    #     separator #4b5262
+    #
+    #     # colour of border, background, and text
+    #     focused_workspace       #2f343f #bf616a #d8dee8
+    #     active_workspace        #2f343f #2f343f #d8dee8
+    #     inactive_workspace      #2f343f #2f343f #d8dee8
+    #     urgent_workspacei       #2f343f #ebcb8b #2f343f
+    # }
         status_command i3status
 }
+
+# # window rules, you can find the window class using xprop
+# for_window [class=".*"] border pixel 4
+# assign [class=URxvt] 1
+# assign [class=Firefox|Transmission-gtk] 2
+# assign [class=Thunar|File-roller] 3
+# assign [class=Geany|Evince|Gucharmap|Soffice|libreoffice*] 4
+# assign [class=Audacity|Vlc|mpv|Ghb|Xfburn|Gimp*|Inkscape] 5
+# assign [class=Lxappearance|System-config-printer.py|Lxtask|GParted|Pavucontrol|Exo-helper*|Lxrandr|Arandr] 6
+# for_window [class=Viewnior|feh|Audacious|File-roller|Lxappearance|Lxtask|Pavucontrol] floating enable
+# for_window [class=URxvt|Firefox|Geany|Evince|Soffice|libreoffice*|mpv|Ghb|Xfburn|Gimp*|Inkscape|Vlc|Lxappearance|Audacity] focus
+# for_window [class=Xfburn|GParted|System-config-printer.py|Lxtask|Pavucontrol|Exo-helper*|Lxrandr|Arandr] focus
+
+# colour of border, background, text, indicator, and child_border
+# client.focused              #bf616a #2f343f #d8dee8 #bf616a #d8dee8
+# client.focused_inactive     #2f343f #2f343f #d8dee8 #2f343f #2f343f
+# client.unfocused            #2f343f #2f343f #d8dee8 #2f343f #2f343f
+# client.urgent               #2f343f #2f343f #d8dee8 #2f343f #2f343f
+# client.placeholder          #2f343f #2f343f #d8dee8 #2f343f #2f343f
+# client.background           #2f343f
