--- a/terminal/alacritty/alacritty.yml
+++ b/terminal/alacritty/alacritty.yml
@@ -162,84 +162,203 @@ font:
 # If `true`, bold text is drawn using the bright color variants.
 draw_bold_text_with_bright_colors: true
 
-# Colors (Tomorrow Night Bright)
+
+# Colors (Seoul256)
 colors:
   # Default colors
   primary:
-    # background: '0x000000'
-    background: '0x3c3f41'
-    foreground: '0xeaeaea'
-
-    # Bright and dim foreground colors
-    #
-    # The dimmed foreground color is calculated automatically if it is not present.
-    # If the bright foreground color is not set, or `draw_bold_text_with_bright_colors`
-    # is `false`, the normal foreground color will be used.
-    #dim_foreground: '0x9a9a9a'
-    #bright_foreground: '0xffffff'
-
-  # Cursor colors
-  #
-  # Colors which should be used to draw the terminal cursor. If these are unset,
-  # the cursor color will be the inverse of the cell color.
-  #cursor:
-  #  text: '0x000000'
-  #  cursor: '0xffffff'
-
-  # Selection colors
-  #
-  # Colors which should be used to draw the selection area. If selection
-  # background is unset, selection color will be the inverse of the cell colors.
-  # If only text is unset the cell text color will remain the same.
-  #selection:
-  #  text: '0xeaeaea'
-  #  background: '0x404040'
+    background: '0x3a3a3a'
+    foreground: '0xd0d0d0'
 
   # Normal colors
   normal:
-    black:   '0x000000'
-    red:     '0xd54e53'
-    green:   '0xb9ca4a'
-    yellow:  '0xe6c547'
-    blue:    '0x7aa6da'
-    magenta: '0xc397d8'
-    cyan:    '0x70c0ba'
-    white:   '0xeaeaea'
+    black:   '0x4e4e4e'
+    red:     '0xd68787'
+    green:   '0x5f865f'
+    yellow:  '0xd8af5f'
+    blue:    '0x85add4'
+    magenta: '0xd7afaf'
+    cyan:    '0x87afaf'
+    white:   '0xd0d0d0'
 
   # Bright colors
   bright:
-    black:   '0x666666'
-    red:     '0xff3334'
-    green:   '0x9ec400'
-    yellow:  '0xe7c547'
-    blue:    '0x7aa6da'
-    magenta: '0xb77ee0'
-    cyan:    '0x54ced6'
-    white:   '0xffffff'
+    black:   '0x626262'
+    red:     '0xd75f87'
+    green:   '0x87af87'
+    yellow:  '0xffd787'
+    blue:    '0xadd4fb'
+    magenta: '0xffafaf'
+    cyan:    '0x87d7d7'
+    white:   '0xe4e4e4'
 
-  # Dim colors
-  #
-  # If the dim colors are not set, they will be calculated automatically based
-  # on the `normal` colors.
-  #dim:
-  #  black:   '0x000000'
-  #  red:     '0x8c3336'
-  #  green:   '0x7a8530'
-  #  yellow:  '0x97822e'
-  #  blue:    '0x506d8f'
-  #  magenta: '0x80638e'
-  #  cyan:    '0x497e7a'
-  #  white:   '0x9a9a9a'
 
-  # Indexed Colors
-  #
-  # The indexed colors include all colors from 16 to 256.
-  # When these are not set, they're filled with sensible defaults.
-  #
-  # Example:
-  #   `- { index: 16, color: '0xff00ff' }`
-  #
-  indexed_colors: []
+# # XTerm's default colors
+# colors:
+#    # Default colors
+#    primary:
+#      background: '0x000000'
+#      foreground: '0xffffff'
+#    # Normal colors
+#    normal:
+#      black:   '0x000000'
+#      red:     '0xcd0000'
+#      green:   '0x00cd00'
+#      yellow:  '0xcdcd00'
+#      blue:    '0x0000ee'
+#      magenta: '0xcd00cd'
+#      cyan:    '0x00cdcd'
+#      white:   '0xe5e5e5'
+#
+#    # Bright colors
+#    bright:
+#      black:   '0x7f7f7f'
+#      red:     '0xff0000'
+#      green:   '0x00ff00'
+#      yellow:  '0xffff00'
+#      blue:    '0x5c5cff'
+#      magenta: '0xff00ff'
+#      cyan:    '0x00ffff'
+#      white:   '0xffffff'
+
+
+# # Colors (Terminal.app)
+# colors:
+#   # Default colors
+#   primary:
+#     background: '0x000000'
+#     foreground: '0xb6b6b6'
+#
+#   # Normal colors
+#   normal:
+#     black:   '0x000000'
+#     red:     '0x990000'
+#     green:   '0x00a600'
+#     yellow:  '0x999900'
+#     blue:    '0x0000b2'
+#     magenta: '0xb200b2'
+#     cyan:    '0x00a6b2'
+#     white:   '0xbfbfbf'
+#
+#   # Bright colors
+#   bright:
+#     black:   '0x666666'
+#     red:     '0xe50000'
+#     green:   '0x00d900'
+#     yellow:  '0xe5e500'
+#     blue:    '0x0000ff'
+#     magenta: '0xe500e5'
+#     cyan:    '0x00e5e5'
+#     white:   '0xe5e5e5'
+
+
+# # Colors (Ayu Dark)
+# colors:
+#   # Default colors
+#   primary:
+#     background: '0x0A0E14'
+#     foreground: '0xB3B1AD'
+#
+#   # Normal colors
+#   normal:
+#     black: '0x01060E'
+#     red: '0xEA6C73'
+#     green: '0x91B362'
+#     yellow: '0xF9AF4F'
+#     blue: '0x53BDFA'
+#     magenta: '0xFAE994'
+#     cyan: '0x90E1C6'
+#     white: '0xC7C7C7'
+#
+#   # Bright colors
+#   bright:
+#     black: '0x686868'
+#     red: '0xF07178'
+#     green: '0xC2D94C'
+#     yellow: '0xFFB454'
+#     blue: '0x59C2FF'
+#     magenta: '0xFFEE99'
+#     cyan: '0x95E6CB'
+#     white: '0xFFFFFF'
+
+# # Colors (Tomorrow Night Bright)
+# colors:
+#   # Default colors
+#   primary:
+#     # background: '0x000000'
+#     background: '0x3c3f41'
+#     foreground: '0xeaeaea'
+#
+#     # Bright and dim foreground colors
+#     #
+#     # The dimmed foreground color is calculated automatically if it is not present.
+#     # If the bright foreground color is not set, or `draw_bold_text_with_bright_colors`
+#     # is `false`, the normal foreground color will be used.
+#     #dim_foreground: '0x9a9a9a'
+#     #bright_foreground: '0xffffff'
+#
+#   # Cursor colors
+#   #
+#   # Colors which should be used to draw the terminal cursor. If these are unset,
+#   # the cursor color will be the inverse of the cell color.
+#   #cursor:
+#   #  text: '0x000000'
+#   #  cursor: '0xffffff'
+#
+#   # Selection colors
+#   #
+#   # Colors which should be used to draw the selection area. If selection
+#   # background is unset, selection color will be the inverse of the cell colors.
+#   # If only text is unset the cell text color will remain the same.
+#   #selection:
+#   #  text: '0xeaeaea'
+#   #  background: '0x404040'
+#
+#   # Normal colors
+#   normal:
+#     black:   '0x000000'
+#     red:     '0xd54e53'
+#     green:   '0xb9ca4a'
+#     yellow:  '0xe6c547'
+#     blue:    '0x7aa6da'
+#     magenta: '0xc397d8'
+#     cyan:    '0x70c0ba'
+#     white:   '0xeaeaea'
+#
+#   # Bright colors
+#   bright:
+#     black:   '0x666666'
+#     red:     '0xff3334'
+#     green:   '0x9ec400'
+#     yellow:  '0xe7c547'
+#     blue:    '0x7aa6da'
+#     magenta: '0xb77ee0'
+#     cyan:    '0x54ced6'
+#     white:   '0xffffff'
+#
+#   # Dim colors
+#   #
+#   # If the dim colors are not set, they will be calculated automatically based
+#   # on the `normal` colors.
+#   #dim:
+#   #  black:   '0x000000'
+#   #  red:     '0x8c3336'
+#   #  green:   '0x7a8530'
+#   #  yellow:  '0x97822e'
+#   #  blue:    '0x506d8f'
+#   #  magenta: '0x80638e'
+#   #  cyan:    '0x497e7a'
+#   #  white:   '0x9a9a9a'
+#
+#   # Indexed Colors
+#   #
+#   # The indexed colors include all colors from 16 to 256.
+#   # When these are not set, they're filled with sensible defaults.
+#   #
+#   # Example:
+#   #   `- { index: 16, color: '0xff00ff' }`
+#   #
+#   indexed_colors: []
 
 # Visual Bell
 #
