--- a/i3/config
+++ b/i3/config
@@ -15,12 +15,15 @@ set $mod Mod1
 # is used in the bar {} block below.
 #font pango:DejaVu Sans Mono 12
 # font pango:monospace 13
-font pango: Noto Sans 13
+font pango: Noto Sans 11
 
 # autostart
-exec --no-startup-id feh --bg-scale ~/Pictures/YOGT.png
+exec --no-startup-id feh --bg-scale ~/Pictures/modlab.png
 exec --no-startup-id flameshot
-exec --no-startup-id compton -b
+# exec --no-startup-id compton -b
+# exec_always variety
+exec_always compton
+exec_always fcitx
 
 
 # Use Mouse+$mod to drag floating windows to their wanted position
@@ -63,10 +66,10 @@ bindsym $mod+Up focus up
 bindsym $mod+Right focus right
 
 # move focused window
-bindsym $mod+Shift+j move left
-bindsym $mod+Shift+k move down
-bindsym $mod+Shift+l move up
-bindsym $mod+Shift+semicolon move right
+bindsym $mod+Shift+h move left
+bindsym $mod+Shift+j move down
+bindsym $mod+Shift+k move up
+bindsym $mod+Shift+l move right
 
 # alternatively, you can use the cursor keys:
 bindsym $mod+Shift+Left move left
@@ -149,10 +152,10 @@ mode "resize" {
         # Pressing right will grow the window’s width.
         # Pressing up will shrink the window’s height.
         # Pressing down will grow the window’s height.
-        bindsym h resize shrink width 10 px or 10 ppt
-        bindsym j resize grow height 10 px or 10 ppt
-        bindsym k resize shrink height 10 px or 10 ppt
-        bindsym l resize grow width 10 px or 10 ppt
+        bindsym h resize grow width 10 px or 10 ppt
+        bindsym j resize shrink  height 10 px or 10 ppt
+        bindsym k resize grow height 10 px or 10 ppt
+        bindsym l resize shrink width 10 px or 10 ppt
 
         # same bindings, but for the arrow keys
         bindsym Left resize shrink width 10 px or 10 ppt
@@ -183,6 +186,12 @@ bar {
     # }
         status_command i3status
 }
+
+# hide the head title of windoes
+new_window 1pixel
+
+# gaps
+gaps inner 8
 
 # # window rules, you can find the window class using xprop
 # for_window [class=".*"] border pixel 4
