--- a/.tmux.conf
+++ b/.tmux.conf
@@ -27,8 +27,8 @@ set -g default-terminal "tmux-256color"
 
 set -g mouse on
 
-# set-option -g status on
-set-option -g status off
+set-option -g status on
+# set-option -g status off
 
 # vim-like pane selection
 bind l select-pane -R
