--- a/i3/config
+++ b/i3/config
@@ -10,7 +10,6 @@
 # Please see https://i3wm.org/docs/userguide.html for a complete reference!
 
 set $mod Mod1
-
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
 #font pango:DejaVu Sans Mono 12
@@ -18,12 +17,15 @@ set $mod Mod1
 font pango: Noto Sans 11
 
 # autostart
-exec --no-startup-id feh --bg-scale ~/Pictures/modlab.png
+exec --no-startup-id feh --bg-scale ~/Pictures/wall.png
 exec --no-startup-id flameshot
 # exec --no-startup-id compton -b
-# exec_always variety
+exec_always variety
 exec_always compton
 exec_always fcitx
+exec_always ~/.config/polybar/launch.sh
+exec_always xmodmap ~/.xmodmap
+
 
 
 # Use Mouse+$mod to drag floating windows to their wanted position
@@ -184,6 +186,7 @@ bar {
     #     inactive_workspace      #2f343f #2f343f #d8dee8
     #     urgent_workspacei       #2f343f #ebcb8b #2f343f
     # }
+        mode hide
         status_command i3status
 }
 
