--- a/i3/config
+++ b/i3/config
@@ -23,8 +23,9 @@ exec --no-startup-id flameshot
 exec_always variety
 exec_always compton
 exec_always fcitx
+# exec_always xmodmap ...
 exec_always ~/.config/polybar/launch.sh
-exec_always xmodmap ~/.xmodmap
+exec_always alacritty
 
 
 
@@ -214,4 +215,4 @@ gaps inner 8
 # client.unfocused            #2f343f #2f343f #d8dee8 #2f343f #2f343f
 # client.urgent               #2f343f #2f343f #d8dee8 #2f343f #2f343f
 # client.placeholder          #2f343f #2f343f #d8dee8 #2f343f #2f343f
-# client.background           #2f343f
+ 
