--- a/i3/config
+++ b/i3/config
@@ -33,8 +33,8 @@ floating_modifier $mod
 
 #===programs shortcuts===
 
-# browsers--firefox chromium
-bindsym $mod+g exec google-chrome
+# browsers--firefox
+bindsym $mod+b exec firefox
 
 # start a terminal
 # i3的脚本，自动选择系统安装的默认终端
@@ -48,12 +48,10 @@ bindsym $mod+u exec --no-startup-id thunar
 # bindsym $mod+Shift+q kill
 bindsym Mod1+F4 kill
 
-# bar toggle, hide or show
-bindsym $mod+m bar mode toggle
 
 # start dmenu (a program launcher)
 # bindsym $mod+space exec --no-startup-id i3-dmenu-desktop
- bindsym $mod+space exec --no-startup-id rofi -lines 12 -padding 18 -width 60 -location 0 -show drun -sidebar-mode -columns 3
+bindsym $mod+space exec --no-startup-id rofi -lines 12 -padding 18 -width 60 -location 0 -show drun -sidebar-mode -columns 3
 
 # change focus
 bindsym $mod+h focus left
@@ -81,10 +79,12 @@ bindsym $mod+Shift+Right move right
 
 # split in horizontal orientation
 # bindsym $mod+h split h
-bindsym $mod+c split h
+# bindsym $mod+c split h
+bindsym $mod+w split h
 
 # split in vertical orientation
-bindsym $mod+v split v 
+# bindsym $mod+v split v
+bindsym $mod+q split v
 
 # enter fullscreen mode for the focused container
 bindsym $mod+f fullscreen toggle
@@ -99,7 +99,7 @@ bindsym $mod+e layout toggle split
 # bindsym $mod+u border none
 bindsym $mod+n border normal
 bindsym $mod+o border 1pixel
-bindsym $mod+b border toggle
+# bindsym $mod+b border toggle
 
 # toggle tiling / floating
 bindsym $mod+Shift+space floating toggle
@@ -171,6 +171,9 @@ mode "resize" {
 }
 
 bindsym $mod+r mode "resize"
+
+# bar toggle, hide or show
+bindsym $mod+m bar mode toggle
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
