--- a/i3/config
+++ b/i3/config
@@ -79,12 +79,12 @@ bindsym $mod+Shift+Right move right
 
 # split in horizontal orientation
 # bindsym $mod+h split h
-# bindsym $mod+c split h
-bindsym $mod+w split h
+bindsym $mod+c split h
+# bindsym $mod+w split h
 
 # split in vertical orientation
-# bindsym $mod+v split v
-bindsym $mod+q split v
+bindsym $mod+v split v
+# bindsym $mod+q split v
 
 # enter fullscreen mode for the focused container
 bindsym $mod+f fullscreen toggle
@@ -198,23 +198,3 @@ new_window 1pixel
 
 # gaps
 gaps inner 4
-
-# # window rules, you can find the window class using xprop
-# for_window [class=".*"] border pixel 4
-# assign [class=URxvt] 1
-# assign [class=Firefox|Transmission-gtk] 2
-# assign [class=Thunar|File-roller] 3
-# assign [class=Geany|Evince|Gucharmap|Soffice|libreoffice*] 4
-# assign [class=Audacity|Vlc|mpv|Ghb|Xfburn|Gimp*|Inkscape] 5
-# assign [class=Lxappearance|System-config-printer.py|Lxtask|GParted|Pavucontrol|Exo-helper*|Lxrandr|Arandr] 6
-# for_window [class=Viewnior|feh|Audacious|File-roller|Lxappearance|Lxtask|Pavucontrol] floating enable
-# for_window [class=URxvt|Firefox|Geany|Evince|Soffice|libreoffice*|mpv|Ghb|Xfburn|Gimp*|Inkscape|Vlc|Lxappearance|Audacity] focus
-# for_window [class=Xfburn|GParted|System-config-printer.py|Lxtask|Pavucontrol|Exo-helper*|Lxrandr|Arandr] focus
-
-# colour of border, background, text, indicator, and child_border
-# client.focused              #bf616a #2f343f #d8dee8 #bf616a #d8dee8
-# client.focused_inactive     #2f343f #2f343f #d8dee8 #2f343f #2f343f
-# client.unfocused            #2f343f #2f343f #d8dee8 #2f343f #2f343f
-# client.urgent               #2f343f #2f343f #d8dee8 #2f343f #2f343f
-# client.placeholder          #2f343f #2f343f #d8dee8 #2f343f #2f343f
- 
