--- a/.thinkvim.d/local_plugins.yaml
+++ b/.thinkvim.d/local_plugins.yaml
@@ -1,1 +1,29 @@
+# __     ___             _                          __  __
+# \ \   / (_)_ __ ___   | |    _____   _____  ___  |  \/  | ___
+#  \ \ / /| | '_ ` _ \  | |   / _ \ \ / / _ \/ __| | |\/| |/ _ \
+#   \ V / | | | | | | | | |__| (_) \ V /  __/\__ \ | |  | |  __/
+#    \_/  |_|_| |_| |_| |_____\___/ \_/ \___||___/ |_|  |_|\___|
+#
+# My custom plugins for ThinkVim.
+# Author: Na Sen
+
 - repo: 'tomtom/tcomment_vim'
+- { repo: yuttie/comfortable-motion.vim, if: 0 }
+
+#  Language {{{ #
+# language support for rust
+- repo: rust-lang/rust.vim
+  on_ft: rust
+#  }}} Language #
+
+#  Editing {{{ #
+# fix neovim block paste bug
+- repo: vim-scripts/fcitx.vim
+#  }}} Editing #
+
+#  Theme {{{ #
+- repo: sainnhe/gruvbox-material
+#  }}} Theme #
+
+#  Main {{{ #
+#  }}} Main #
