--- a/xorg.conf.d/30-touchpad.conf
+++ b/xorg.conf.d/30-touchpad.conf
@@ -3,6 +3,6 @@ Section "InputClass"
 	Driver "libinput"
 	MatchIsTouchpad "on"
 	Option "Tapping" "on"
-	Option "ScrollMethod" "edge"
 EndSection
+	# Option "ScrollMethod" "edge"
 
