--- a/i3/config
+++ b/i3/config
@@ -22,9 +22,9 @@ font pango: Noto Sans 11
 # exec --no-startup-id compton -b
 exec --no-startup-id dunst
 exec --no-startup-id keynav
-exec --no-startup-id screenlayout
 exec_always variety
 exec_always compton
+exec_always nm-applet
 exec_always fcitx
 exec_always ~/.config/polybar/launch.sh
 exec_always alacritty
@@ -35,6 +35,13 @@ exec_always alacritty
 floating_modifier $mod
 
 #===programs shortcuts===
+
+bindsym XF86AudioRaiseVolume exec amixer -q set Master 5%+ unmute  
+bindsym XF86AudioLowerVolume exec amixer -q set Master 5%- unmute  
+bindsym XF86AudioMute exec amixer -q set Master mute  
+# bindsym XF86AudioPlay exec playerctl play-pause  
+# bindsym XF86AudioNext exec playerctl next  
+# bindsym XF86AudioPrev exec playerctl previous  
 
 # browsers--firefox
 bindsym $mod+b exec firefox
@@ -48,14 +55,12 @@ bindsym $mod+Return exec alacritty
 # bindsym $mod+u exec --no-startup-id thunar
 bindsym $mod+u exec --no-startup-id dolphin
 
-# kill focused window
-# bindsym $mod+Shift+q kill
-bindsym Mod1+F4 kill
 
 
 # start dmenu (a program launcher)
 # bindsym $mod+space exec --no-startup-id i3-dmenu-desktop
-bindsym $mod+space exec --no-startup-id rofi -lines 12 -padding 18 -width 60 -location 0 -show drun -sidebar-mode -columns 3
+# bindsym $mod+space exec --no-startup-id rofi -lines 12 -padding 18 -width 60 -location 0 -show drun -sidebar-mode -columns 3
+bindsym $mod+space exec --no-startup-id rofi -show drun
 
 # change focus
 bindsym $mod+h focus left
@@ -88,7 +93,12 @@ bindsym $mod+c split h
 
 # split in vertical orientation
 bindsym $mod+v split v
-# bindsym $mod+q split v
+
+# kill focused window
+# kill with alt+F4
+bindsym Mod1+F4 kill
+# kill with q
+bindsym $mod+q kill
 
 # enter fullscreen mode for the focused container
 bindsym $mod+f fullscreen toggle
@@ -118,33 +128,48 @@ bindsym $mod+a focus parent
 # lock screen
 bindsym mod4+l exec i3lock-fancy
 
+# change display mode
+bindsym mod4+p exec ~/.screenlayout/toggle.sh
+
 # # switch to near workspace
 bindsym mod4+Shift+Tab workspace prev
 bindsym mod4+Tab workspace next
 
+# set workspace icon
+set $ws1   "1 "
+set $ws2   "2 "
+set $ws3   "3 "
+set $ws4   "4 "
+set $ws5   "5 "
+set $ws6   "6 "
+set $ws7   "7 "
+set $ws8   "8 "
+set $ws9   9
+set $ws10  10
+
 # switch to workspace
-bindsym $mod+1 workspace 1
-bindsym $mod+2 workspace 2
-bindsym $mod+3 workspace 3
-bindsym $mod+4 workspace 4
-bindsym $mod+5 workspace 5
-bindsym $mod+6 workspace 6
-bindsym $mod+7 workspace 7
-bindsym $mod+8 workspace 8
-bindsym $mod+9 workspace 9
-bindsym $mod+0 workspace 10
+bindsym $mod+1 workspace $ws1
+bindsym $mod+2 workspace $ws2
+bindsym $mod+3 workspace $ws3
+bindsym $mod+4 workspace $ws4
+bindsym $mod+5 workspace $ws5
+bindsym $mod+6 workspace $ws6
+bindsym $mod+7 workspace $ws7
+bindsym $mod+8 workspace $ws8
+bindsym $mod+9 workspace $ws9
+bindsym $mod+0 workspace $ws10
 
 # move focused container to workspace
-bindsym $mod+Shift+1 move container to workspace 1
-bindsym $mod+Shift+2 move container to workspace 2
-bindsym $mod+Shift+3 move container to workspace 3
-bindsym $mod+Shift+4 move container to workspace 4
-bindsym $mod+Shift+5 move container to workspace 5
-bindsym $mod+Shift+6 move container to workspace 6
-bindsym $mod+Shift+7 move container to workspace 7
-bindsym $mod+Shift+8 move container to workspace 8
-bindsym $mod+Shift+9 move container to workspace 9
-bindsym $mod+Shift+0 move container to workspace 10
+bindsym $mod+Shift+1 move container to workspace $ws1
+bindsym $mod+Shift+2 move container to workspace $ws2
+bindsym $mod+Shift+3 move container to workspace $ws3
+bindsym $mod+Shift+4 move container to workspace $ws4
+bindsym $mod+Shift+5 move container to workspace $ws5
+bindsym $mod+Shift+6 move container to workspace $ws6
+bindsym $mod+Shift+7 move container to workspace $ws7
+bindsym $mod+Shift+8 move container to workspace $ws8
+bindsym $mod+Shift+9 move container to workspace $ws9
+bindsym $mod+Shift+0 move container to workspace $ws10
 
 # reload the configuration file
 bindsym $mod+Shift+c reload
@@ -184,21 +209,21 @@ bindsym $mod+m bar mode toggle
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
-bar {
-    #     colors {
-    #     background #2f343f
-    #     statusline #2f343f
-    #     separator #4b5262
-    #
-    #     # colour of border, background, and text
-    #     focused_workspace       #2f343f #bf616a #d8dee8
-    #     active_workspace        #2f343f #2f343f #d8dee8
-    #     inactive_workspace      #2f343f #2f343f #d8dee8
-    #     urgent_workspacei       #2f343f #ebcb8b #2f343f
-    # }
-        mode hide
-        status_command i3status
-}
+# bar {
+#     #     colors {
+#     #     background #2f343f
+#     #     statusline #2f343f
+#     #     separator #4b5262
+#     #
+#     #     # colour of border, background, and text
+#     #     focused_workspace       #2f343f #bf616a #d8dee8
+#     #     active_workspace        #2f343f #2f343f #d8dee8
+#     #     inactive_workspace      #2f343f #2f343f #d8dee8
+#     #     urgent_workspacei       #2f343f #ebcb8b #2f343f
+#     # }
+#         mode hide
+#         status_command i3status
+# }
 
 # hide the head title of windoes
 new_window 1pixel
