--- a/.gitconfig
+++ b/.gitconfig
@@ -1,4 +1,7 @@
 [user]
-    name = qistout
-    email = 2817253603@qq.com
+    # name = qistout
+    # email = 2817253603@qq.com
+    name = 齐强
+    email = 2017011436@secoder.net
+
 
