--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,34 +1,31 @@
 ##to make the conf-file effect, (restart the tmux) or ( prefix + source-file ~/.tmux.conf)
-#
-##set the prefix is Ctrl + a
-##set -g prefix C-a
-##release the default relationship between prefix and Ctrl + b
-##unbind C-b
-#
-##up
-#bind-key k select-pane -U
-###down
-#bind-key j select-pane -D
-###left
-#bind-key h select-pane -L
-###right
-#bind-key l select-pane -R
-##
-###set the hot-key in copy-mode the same asvi mode
-#setw -g mode-keys vi
-##
-#set -g default-terminal "tmux-256color"
-set -sg escape-time 0
+
+# release the default relationship between prefix and Ctrl + b
+unbind C-b
+set-option -g prefix C-s
+bind-key C-s last-window
+# 在当前目录创建新窗口
+unbind-key c
+bind c new-window -c "#{pane_current_path}"
+unbind-key '"'
+unbind-key '%'
+bind '"' split-window -c '#{pane_current_path}'
+bind '%' split-window -h -c '#{pane_current_path}'
+bind b split-window -c '#{pane_current_path}'
+bind v split-window -h -c '#{pane_current_path}'
+bind c-b split-window -c '#{pane_current_path}'
+bind c-v split-window -h -c '#{pane_current_path}'
+bind r source-file ~/.tmux.conf \; display "Reloaded!"
+# bind-key C-l select-window -l
+
 set-option -g history-limit 30000
 # set-option -g default-shell /bin/zsh  # 使用 zsh 为默认 shell
 set-window-option -g mode-keys vi # vi key
 set-option -g status-keys vi
-set -g default-terminal "tmux-256color"
-
-set -g mouse on
-
-# set-option -g status on
 set-option -g status off
+set -sg escape-time 0
+set -g default-terminal "tmux-256color"
+set -g mouse on
 
 # vim-like pane selection
 bind l select-pane -R
@@ -45,17 +42,10 @@ bind -r J resize-pane -D 1
 bind -r K resize-pane -U 1
 bind -r L resize-pane -R 5
 
-# 在当前目录创建新窗口
-unbind-key c
-bind c new-window -c "#{pane_current_path}"
-unbind-key '"'
-unbind-key '%'
-bind '"' split-window -c '#{pane_current_path}'
-bind '%' split-window -h -c '#{pane_current_path}'
-# end
-
-set -g base-index 1 # start windows numbering at 1
-setw -g pane-base-index 1 # make pane numbering consistent with windows
+# start windows numbering at 1
+set -g base-index 1
+# make pane numbering consistent with windows
+setw -g pane-base-index 1
 set-option -g update-environment "DBUS_SESSION_BUS_ADDRESS DISPLAY SSH_ASKPASS SSH_AUTH_SOCK SSH_AGENT_PID SSH_CONNECTION WINDOWID XAUTHORITY"
 
 # 显示工作区标题
@@ -74,13 +64,12 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 
 
-#tmux-resurrect
 # tmux-resurrect
 set -g @resurrect-save-bash-history 'on'
 set -g @resurrect-capture-pane-contents 'on'
 set -g @resurrect-strategy-vim 'session'
-# set -g @resurrect-save 'S'
-# set -g @resurrect-restore 'R'
+set -g @resurrect-save 'S'
+set -g @resurrect-restore 'R'
 
 
 
@@ -90,4 +79,4 @@ set -g @resurrect-strategy-vim 'session'
 # set -g @plugin 'git@bitbucket.com/user/plugin'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run '~/.tmux/plugins/tpm/tpm'
+run -b '~/.tmux/plugins/tpm/tpm'
