add raspberry network config sh

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,7 +2,7 @@
 
 # release the default relationship between prefix and Ctrl + b
 unbind C-b
-set-option -g prefix C-s
+set-option -g prefix C-f
 bind-key C-s last-window
 # 在当前目录创建新窗口
 unbind-key c
