--- a/.tmux.conf
+++ b/.tmux.conf
@@ -3,7 +3,7 @@
 # release the default relationship between prefix and Ctrl + b
 unbind C-b
 set-option -g prefix C-f
-bind-key C-s last-window
+bind-key C-f last-window
 # 在当前目录创建新窗口
 unbind-key c
 bind c new-window -c "#{pane_current_path}"
