--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,6 +4,8 @@
 unbind C-b
 set-option -g prefix C-f
 bind-key C-f last-window
+# set-option -g prefix C-b
+# bind-key C-b last-window
 # 在当前目录创建新窗口
 unbind-key c
 bind c new-window -c "#{pane_current_path}"
