--- a/.gitconfig
+++ b/.gitconfig
@@ -1,10 +1,10 @@
 [user]
     # name = qistout
     # email = 2817253603@qq.com
-    # name = 齐强
-    # email = 2017011436@secoder.net
-    name = 王焱
-    email = 2017050024@secoder.net
+    name = 齐强
+    email = 2017011436@secoder.net
+    # name = 王焱
+    # email = 2017050024@secoder.net
 
 [alias]
     cm = commit
