--- a/sh/.shellconfig
+++ b/sh/.shellconfig
@@ -26,22 +26,32 @@ export satellite_db_addr=167.179.97.242
 
 
 #################### alias ####################
+alias update="sudo apt update && sudo apt upgrade -y"
 alias py='python3'
-alias ipy='ipython'
+alias ipy='ipython3'
 alias xdg="xdg-open"
 alias za="zathura"
 alias ra="ranger"
 alias l="ls -al"
 alias ls="ls --color"
+alias la='ls -A'
+alias ll='ls -alF'
 alias md="mkdir"
 alias ca="conda activate py36"
 alias nv="nvim"
+alias v="vim"
 alias -g "kbl"="/bin/bash /usr/local/share/kbd_backlight"
 alias ta="tmux attach"
 alias t="tmux"
 alias wd="wd -s"
 alias dockerarch="c973e63acf1c"
 alias npmtb="npm install --registry=https://registry.npm.taobao.org"
+alias tx="g++ -O3 -fopenmp qq.cpp -o run && ./run"
+alias latexmk="latexmk -xelatex"
+alias s="seaf-cli"
+# Add an "alert" alias for long running commands.  Use like so:
+#   sleep 10; alert
+alias alert='notify-send --urgency=low -i "$([ $? = 0 ] && echo terminal || echo error)" "$(history|tail -n1|sed -e '\''s/^\s*[0-9]\+\s*//;s/[;&|]\s*alert$//'\'')"'
 
 
 
@@ -81,53 +91,3 @@ bindkey '^Z' fancy-ctrl-z
 #   # tmux attach || tmux new; exit
 #   tmux new; exit
 # fi
-
-
-
-
-
-
-
-
-
-### Added by Zplugin's installer
-source '/home/qiqiang/.zplugin/bin/zplugin.zsh'
-autoload -Uz _zplugin
-(( ${+_comps} )) && _comps[zplugin]=_zplugin
-### End of Zplugin's installer chunk
-#################### plugin ####################
-
-# Two regular plugins loaded without tracking.
-zplugin light zsh-users/zsh-autosuggestions
-zplugin light zdharma/fast-syntax-highlighting
-
-# Plugin history-search-multi-word loaded with tracking.
-zplugin load zdharma/history-search-multi-word
-
-# Load the pure theme, with zsh-async library that's bundled with it.
-zplugin ice pick'async.zsh' src'pure.zsh'
-zplugin light sindresorhus/pure
-
-
-# Theme
-# Binary release in archive, from GitHub-releases page. 
-# After automatic unpacking it provides program 'fzf'.
-zplugin ice from'gh-r' as'program'
-zplugin load junegunn/fzf-bin
-# zplugin ice nocompletions compile'{zinc_functions/*,segments/*,zinc.zsh}'
-# zplugin load robobenklein/zinc
-
-# One other binary release, it needs renaming from `docker-compose-Linux-x86_64`.
-# This is done by ice-mod `mv'{from} -> {to}'. There are multiple packages per
-# single version, for OS X, Linux and Windows – so ice-mod `bpick' is used to
-# select Linux package – in this case this is actually not needed, Zplugin will
-# grep operating system name and architecture automatically when there's no `bpick'.
-zplugin ice from'gh-r' as'program' mv'docker* -> docker-compose' bpick'*linux*'
-zplugin load docker/compose
-
-zplugin ice wait lucid
-zplugin snippet OMZ::lib/git.zsh
-zplugin snippet OMZ::plugins/git/git.plugin.zsh
-zplugin snippet OMZ::plugins/vi-mode/vi-mode.plugin.zsh
-
-[ -f ~/.fzf.zsh ] && source ~/.fzf.zsh
