--- a/.shellconfig
+++ b/.shellconfig
@@ -33,7 +33,7 @@ alias ipy='ipython3'
 alias xdg="xdg-open"
 alias za="zathura"
 alias ra="ranger"
-alias l="ls -al"
+alias l="ls -alh"
 alias ls="ls --color"
 alias la='ls -A'
 alias ll='ls -alF'
