--- a/.shellconfig
+++ b/.shellconfig
@@ -1,5 +1,5 @@
 #################### path ####################
-PATH=$PATH:~/Downloads/mips-mti-elf/bin:~/.cache/wudao-dict/wudao-dict/bin
+PATH=$PATH:~/Downloads/mips-mti-elf/bin:~/.cache/wudao-dict/wudao-dict/bin:~/.local/bin
 
 # >>> conda initialize >>>
 # !! Contents within this block are managed by 'conda init' !!
@@ -46,7 +46,8 @@ alias ta="tmux attach"
 alias t="tmux"
 alias wd="wd -s"
 alias dockerarch="c973e63acf1c"
-alias npmtb="npm install --registry=https://registry.npm.taobao.org"
+alias sudo="sudo "
+alias npmitb="npm install --registry=https://registry.npm.taobao.org"
 alias tx="g++ -O3 -fopenmp qq.cpp -o run && ./run"
 alias latexmk="latexmk -xelatex"
 alias s="seaf-cli"
