--- a/.gitconfig
+++ b/.gitconfig
@@ -8,5 +8,9 @@
 [core]
     editor=vim
 	autocrlf = false
+	compression = -1
 [http]
 	postBuffer = 1048576000
+[oh-my-zsh]
+    # hide some info when in a repo
+	hide-status = 1
