--- a/.tmux.conf
+++ b/.tmux.conf
@@ -44,6 +44,11 @@ bind -r J resize-pane -D 1
 bind -r K resize-pane -U 1
 bind -r L resize-pane -R 5
 
+# pane movement
+# bind-key j command-prompt -p "join pane from:"  "join-pane -s '%%'"
+# bind-key s command-prompt -p "send pane to:"  "join-pane -t '%%'"
+# break-pane
+
 # start windows numbering at 1
 set -g base-index 1
 # make pane numbering consistent with windows
@@ -65,6 +70,8 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-yank'
+
+set -g @yank_selection_mouse 'clipboard' # or 'primary' or 'secondary'
 
 
 # tmux-resurrect
