--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,14 +1,13 @@
 ##to make the conf-file effect, (restart the tmux) or ( prefix + source-file ~/.tmux.conf)
 
-# release the default relationship between prefix and Ctrl + b
-unbind C-b
+unbind C-b # release the default relationship between prefix and Ctrl + b
 set-option -g prefix C-f
 bind-key C-f last-window
-# set-option -g prefix C-b
-# bind-key C-b last-window
+
 # 在当前目录创建新窗口
 unbind-key c
 bind c new-window -c "#{pane_current_path}"
+
 unbind-key '"'
 unbind-key '%'
 bind '"' split-window -c '#{pane_current_path}'
@@ -17,6 +16,7 @@ bind b split-window -c '#{pane_current_path}'
 bind v split-window -h -c '#{pane_current_path}'
 bind c-b split-window -c '#{pane_current_path}'
 bind c-v split-window -h -c '#{pane_current_path}'
+
 bind r source-file ~/.tmux.conf \; display "Reloaded!"
 # bind-key C-l select-window -l
 
@@ -60,11 +60,6 @@ set-option -g update-environment "DBUS_SESSION_BUS_ADDRESS DISPLAY SSH_ASKPASS S
 #set -g pane-border-format "#{pane_index} #T"
 
 
-
-
-
-
-
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
@@ -80,7 +75,6 @@ set -g @resurrect-capture-pane-contents 'on'
 set -g @resurrect-strategy-vim 'session'
 set -g @resurrect-save 'S'
 set -g @resurrect-restore 'R'
-
 
 
 # Other examples:
