--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -153,157 +153,41 @@ tabspaces: 8
 # draw_bold_text_with_bright_colors: true
 
 
-# Colors (Seoul256)
+# color_start
+# xterm.yaml
+# XTerm's default colors
 colors:
   # Default colors
   primary:
-    background: '0x3a3a3a'
-    foreground: '0xd0d0d0'
-
+    background: '0x002b36'
+    foreground: '0x839496'
+    # background: '0x000000'
+    # foreground: '0xffffff'
   # Normal colors
   normal:
-    black:   '0x4e4e4e'
-    red:     '0xd68787'
-    green:   '0x5f865f'
-    yellow:  '0xd8af5f'
-    blue:    '0x85add4'
-    magenta: '0xd7afaf'
-    cyan:    '0x87afaf'
-    white:   '0xd0d0d0'
+    black:   '0x000000'
+    red:     '0xcd0000'
+    green:   '0x00cd00'
+    yellow:  '0xcdcd00'
+    blue:    '0x0000ee'
+    magenta: '0xcd00cd'
+    cyan:    '0x00cdcd'
+    white:   '0xe5e5e5'
 
   # Bright colors
   bright:
-    black:   '0x626262'
-    red:     '0xd75f87'
-    green:   '0x87af87'
-    yellow:  '0xffd787'
-    blue:    '0xadd4fb'
-    magenta: '0xffafaf'
-    cyan:    '0x87d7d7'
-    white:   '0xe4e4e4'
+    black:   '0x7f7f7f'
+    red:     '0xff0000'
+    green:   '0x00ff00'
+    yellow:  '0xffff00'
+    blue:    '0x5c5cff'
+    magenta: '0xff00ff'
+    cyan:    '0x00ffff'
+    white:   '0xffffff'
+
+# color_end
 
 
-# # XTerm's default colors
-# colors:
-#    # Default colors
-#    primary:
-#      background: '0x000000'
-#      foreground: '0xffffff'
-#    # Normal colors
-#    normal:
-#      black:   '0x000000'
-#      red:     '0xcd0000'
-#      green:   '0x00cd00'
-#      yellow:  '0xcdcd00'
-#      blue:    '0x0000ee'
-#      magenta: '0xcd00cd'
-#      cyan:    '0x00cdcd'
-#      white:   '0xe5e5e5'
-#
-#    # Bright colors
-#    bright:
-#      black:   '0x7f7f7f'
-#      red:     '0xff0000'
-#      green:   '0x00ff00'
-#      yellow:  '0xffff00'
-#      blue:    '0x5c5cff'
-#      magenta: '0xff00ff'
-#      cyan:    '0x00ffff'
-#      white:   '0xffffff'
-
-
-# # Colors (Terminal.app)
-# colors:
-#   # Default colors
-#   primary:
-#     background: '0x000000'
-#     foreground: '0xb6b6b6'
-#
-#   # Normal colors
-#   normal:
-#     black:   '0x000000'
-#     red:     '0x990000'
-#     green:   '0x00a600'
-#     yellow:  '0x999900'
-#     blue:    '0x0000b2'
-#     magenta: '0xb200b2'
-#     cyan:    '0x00a6b2'
-#     white:   '0xbfbfbf'
-#
-#   # Bright colors
-#   bright:
-#     black:   '0x666666'
-#     red:     '0xe50000'
-#     green:   '0x00d900'
-#     yellow:  '0xe5e500'
-#     blue:    '0x0000ff'
-#     magenta: '0xe500e5'
-#     cyan:    '0x00e5e5'
-#     white:   '0xe5e5e5'
-
-
-# # Colors (Ayu Dark)
-# colors:
-#   # Default colors
-#   primary:
-#     background: '0x0A0E14'
-#     foreground: '0xB3B1AD'
-#
-#   # Normal colors
-#   normal:
-#     black: '0x01060E'
-#     red: '0xEA6C73'
-#     green: '0x91B362'
-#     yellow: '0xF9AF4F'
-#     blue: '0x53BDFA'
-#     magenta: '0xFAE994'
-#     cyan: '0x90E1C6'
-#     white: '0xC7C7C7'
-#
-#   # Bright colors
-#   bright:
-#     black: '0x686868'
-#     red: '0xF07178'
-#     green: '0xC2D94C'
-#     yellow: '0xFFB454'
-#     blue: '0x59C2FF'
-#     magenta: '0xFFEE99'
-#     cyan: '0x95E6CB'
-#     white: '0xFFFFFF'
-
-# # Colors (Tomorrow Night Bright)
-# colors:
-#   # Default colors
-#   primary:
-#     # background: '0x000000'
-#     background: '0x3c3f41'
-#     foreground: '0xeaeaea'
-#
-#     # Bright and dim foreground colors
-#     #
-#     # The dimmed foreground color is calculated automatically if it is not present.
-#     # If the bright foreground color is not set, or `draw_bold_text_with_bright_colors`
-#     # is `false`, the normal foreground color will be used.
-#     #dim_foreground: '0x9a9a9a'
-#     #bright_foreground: '0xffffff'
-#
-#   # Cursor colors
-#   #
-#   # Colors which should be used to draw the terminal cursor. If these are unset,
-#   # the cursor color will be the inverse of the cell color.
-#   #cursor:
-#   #  text: '0x000000'
-#   #  cursor: '0xffffff'
-#
-#   # Selection colors
-#   #
-#   # Colors which should be used to draw the selection area. If selection
-#   # background is unset, selection color will be the inverse of the cell colors.
-#   # If only text is unset the cell text color will remain the same.
-#   #selection:
-#   #  text: '0xeaeaea'
-#   #  background: '0x404040'
-#
 #   # Normal colors
 #   normal:
 #     black:   '0x000000'
