--- a/.tmux.conf
+++ b/.tmux.conf
@@ -63,18 +63,17 @@ set-option -g update-environment "DBUS_SESSION_BUS_ADDRESS DISPLAY SSH_ASKPASS S
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'tmux-plugins/tmux-resurrect'
 set -g @plugin 'tmux-plugins/tmux-yank'
-
 set -g @yank_selection_mouse 'clipboard' # or 'primary' or 'secondary'
 
 
-# tmux-resurrect
-set -g @resurrect-save-bash-history 'on'
-set -g @resurrect-capture-pane-contents 'on'
-set -g @resurrect-strategy-vim 'session'
-set -g @resurrect-save 'S'
-set -g @resurrect-restore 'R'
+# # tmux-resurrect
+# set -g @plugin 'tmux-plugins/tmux-resurrect'
+# set -g @resurrect-save-bash-history 'on'
+# set -g @resurrect-capture-pane-contents 'on'
+# set -g @resurrect-strategy-vim 'session'
+# set -g @resurrect-save 'S'
+# set -g @resurrect-restore 'R'
 
 
 # Other examples:
