--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -69,53 +69,26 @@ scrolling:
   # scrollback is enabled (history > 0).
   multiplier: 3
 
-  # Scroll to the bottom when new text is written to the terminal.
-  auto_scroll: false
+# Font configuration (changes require restart)
+font:
+  # The normal (roman) font face to use.
+  normal:
+    family: Noto mono
+    # Style can be specified to pick a specific face.
+    style: Regular
 
-# Spaces per Tab (changes require restart)
-#
-# This setting defines the width of a tab in cells.
-#
-# Some applications, like Emacs, rely on knowing about the width of a tab.
-# To prevent unexpected behavior in these applications, it's also required to
-# change the `it` value in terminfo when altering this setting.
-tabspaces: 8
+  # The bold font face
+  bold:
+    family: Noto mono
+    # Style can be specified to pick a specific face.
+    style: Bold
 
-# # Font configuration (changes require restart)
-# font:
-#   # Normal (roman) font face
-#   normal:
-#     # Font family
-#     # Default:
-#     #   - (macOS) Menlo
-#     #   - (Linux) monospace
-#     #   - (Windows) Consolas
-#     family: monospace
-#
-#     # The `style` can be specified to pick a specific face.
-#     style: Regular
-#
-#   # Bold font face
-#   bold:
-#     # Font family
-#     #
-#     # If the bold family is not specified, it will fall back to the
-#     # value specified for the normal font.
-#     family: Robota Mono
-#
-#     # The `style` can be specified to pick a specific face.
-#     style: Bold
-#
-#   # Italic font face
-#   italic:
-#     # Font family
-#     #
-#     # If the italic family is not specified, it will fall back to the
-#     # value specified for the normal font.
-#     family: hack
-#
-#     # The `style` can be specified to pick a specific face.
-#     style: Italic
+  # The italic font face
+  italic:
+    family: Noto mono
+    # Style can be specified to pick a specific face.
+    style: Italic
+
 
 #   # Point size
 #   size: 11.0
@@ -264,7 +237,7 @@ visual_bell:
 #
 # Window opacity as a floating point number from `0.0` to `1.0`.
 # The value `0.0` is completely transparent and `1.0` is opaque.
-background_opacity: 1.0
+background_opacity: 0.9
 
 selection:
   semantic_escape_chars: ",│`|:\"' ()[]{}<>"
