--- a/.config/i3/config
+++ b/.config/i3/config
@@ -17,16 +17,16 @@ set $mod Mod1
 font pango: Noto Sans 11
 
 # autostart
-exec --no-startup-id feh --bg-scale ~/Pictures/wall.png
+exec --no-startup-id feh --bg-scale ~/Pictures/wall.jpg
 exec --no-startup-id flameshot
-# exec --no-startup-id goldendict
-# exec --no-startup-id compton -b
-# exec --no-startup-id dunst
+exec --no-startup-id compton -b
+exec --no-startup-id dunst
 exec --no-startup-id keynav
+# exec --no-startup-id goldendict
 # exec_always variety
 # exec_always seafile
 # exec_always nm-applet
-# exec_always fcitx
+exec_always fcitx
 exec_always ~/.config/polybar/launch.sh
 exec_always alacritty
 # exec_always i3-sensible-terminal
@@ -46,7 +46,7 @@ bindsym XF86AudioMute exec amixer -q set Master mute
 # bindsym XF86AudioPrev exec playerctl previous  
 
 # browsers--firefox
-bindsym $mod+b exec chromium-browser
+bindsym $mod+b exec google-chrome-stable
 
 # start a terminal
 # i3的脚本，自动选择系统安装的默认终端
@@ -54,7 +54,7 @@ bindsym $mod+Return exec alacritty
 # bindsym $mod+Return exec i3-sensible-terminal
 
 # start file manager -- thunar
-bindsym $mod+u exec --no-startup-id nautilus # dolphin thunar
+bindsym $mod+u exec --no-startup-id dolphin # nautilus dolphin thunar
 
 # start dmenu (a program launcher)
 # bindsym $mod+space exec --no-startup-id i3-dmenu-desktop
@@ -126,7 +126,8 @@ bindsym $mod+Shift+space floating toggle
 bindsym $mod+p focus parent
 
 # lock screen
-bindsym mod4+l exec i3lock-fancy
+bindsym mod4+l exec i3lock
+
 bindsym mod4+j exec joplin
 bindsym mod4+Shift+l exec chromium-browser www.leetcode-cn.com
 
@@ -213,25 +214,25 @@ bindsym $mod+m bar mode toggle
 
 # Start i3bar to display a workspace bar (plus the system information i3status
 # finds out, if available)
-# bar {
-#     #     colors {
-#     #     background #2f343f
-#     #     statusline #2f343f
-#     #     separator #4b5262
-#     #
-#     #     # colour of border, background, and text
-#     #     focused_workspace       #2f343f #bf616a #d8dee8
-#     #     active_workspace        #2f343f #2f343f #d8dee8
-#     #     inactive_workspace      #2f343f #2f343f #d8dee8
-#     #     urgent_workspacei       #2f343f #ebcb8b #2f343f
-#     # }
-#     mode hide
-#     height 25
-#     status_command i3status
-# }
+bar {
+    #     colors {
+    #     background #2f343f
+    #     statusline #2f343f
+    #     separator #4b5262
+    #
+    #     # colour of border, background, and text
+    #     focused_workspace       #2f343f #bf616a #d8dee8
+    #     active_workspace        #2f343f #2f343f #d8dee8
+    #     inactive_workspace      #2f343f #2f343f #d8dee8
+    #     urgent_workspacei       #2f343f #ebcb8b #2f343f
+    # }
+    # mode hide
+    height 25
+    status_command i3status
+}
 
 # hide the head title of windoes
 new_window 1pixel
 
 # gaps
-gaps inner 0
+gaps inner 4
