--- a/.shellconfig
+++ b/.shellconfig
@@ -34,15 +34,15 @@ alias ipy='ipython3'
 alias xdg="xdg-open"
 alias za="zathura"
 alias ra="ranger"
-# alias l="ls -alh"
-# alias ls="ls --color"
-# alias la='ls -A'
-# alias ll='ls -alF'
+alias l="ls -alh"
+alias ls="ls --color"
+alias la='ls -A'
+alias ll='ls -alF'
 # ls -> exa
-alias l="exa -lah"
-alias ls=exa
-alias ll="exa -l"
-alias lt="exa -T"
+# alias l="exa -lah"
+# alias ls=exa
+# alias ll="exa -l"
+# alias lt="exa -T"
 
 alias ca="conda activate py36"
 alias nv="nvim"
@@ -74,31 +74,32 @@ alias note="cd ~/note"
 
 
 
-
-
-
 #################### function ####################
 
 function op {
     sudo openvpn --config ~/.openvpn/vpn9.ovpn
 }
 
-# # 通过ctrl-z 由vim 进入shell, 并通过ctrl-z 退回shell
-# function fancy-ctrl-z {
-#   if [[ $#BUFFER -eq 0 ]]; then
-#       BUFFER="fg"
-#       zle accept-line
-#   else
-# 	  zle push-input
-# 	  zle clear-screen
-#   fi
-# }
-# zle -N fancy-ctrl-z
-# bindkey '^Z' fancy-ctrl-z
+# 通过ctrl-z 由vim 进入shell, 并通过ctrl-z 退回shell
+function fancy-ctrl-z {
+  if [[ $#BUFFER -eq 0 ]]; then
+      BUFFER="fg"
+      zle accept-line
+  else
+	  zle push-input
+	  zle clear-screen
+  fi
+}
+zle -N fancy-ctrl-z
+bindkey '^Z' fancy-ctrl-z
 
 function mountsharedir {
     sudo mount -t vboxsf D_DRIVE /mnt/d
     sudo mount -t vboxsf E_DRIVE /mnt/e
+}
+
+function mountdisk {
+    sudo mount /dev/nvme0n1p3 /mnt/d
 }
 
 function mkcd {
@@ -115,42 +116,31 @@ function todo {
             joplin use "Todo"
             joplin mktodo $1
         else
-        # maual version
-            if [[ $# = 0 ]]
-            then
-                cat ~/note/todo.md
-            else
-                echo $1 >> ~/note/todo.md
-            fi
+            echo "joplin not found"
     fi
 }
 
 function mapcaps {
     setxkbmap -option caps:ctrl_modifier
+    # or
+    # setxkbmap -option ctrl:nocaps
 }
-
-function ss {
-    ssh qiqiang@192.168.0.111
-}
-
-function guijop {
-    ~/.joplin/Joplin.AppImage
-}
-
 
 function build {
     g++ $1.cpp -g -std=c++14 -o $1 && ./$1
-    # flag=$?
-    # if [[ $flag -eq 0 ]]
-    # then
-    #     ./$1
-    # fi
 }
 
 function changenet {
     sudo sed -iE "s/192\.168\.[0-9][0-9]*\.1/192.168.$1.1/g" /etc/netplan/01-network-manager-all.yaml
     sudo netplan apply 
 }
+
+function changekbdlight {
+    # echo $1 | sudo tee /sys/class/leds/asus::kbd_backlight/brightness
+    # or
+    sudo brightnessctl --device='asus::kbd_backlight' set $1
+}
+
 
 #################### auto start ####################
 
