update, adjust structure and add some shell function

--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -407,8 +407,8 @@ ramp-foreground = ${colors.foreground-alt}
 type = custom/text
 content = Come on! Qiang!
 ; "content" has the same properties as "format-NAME"
-content-background = #000
-content-foreground = #fff
+; content-background = #000
+; content-foreground = #fff
 content-padding = 4
 
 ; "click-(left|middle|right)" will be executed using "/bin/sh -c $COMMAND"
