--- a/.config/i3/config
+++ b/.config/i3/config
@@ -17,7 +17,7 @@ set $mod Mod1
 font pango: Noto Sans 11
 
 # autostart
-exec --no-startup-id feh --bg-scale ~/Pictures/wall.jpg
+exec --no-startup-id feh --bg-scale ~/Pictures/wall.png
 exec --no-startup-id flameshot
 exec --no-startup-id compton -b
 exec --no-startup-id dunst
@@ -25,9 +25,9 @@ exec --no-startup-id keynav
 # exec --no-startup-id goldendict
 # exec_always variety
 # exec_always seafile
-# exec_always nm-applet
-exec_always fcitx
+exec_always ~/.script/init.sh
 exec_always ~/.config/polybar/launch.sh
+exec_always fcitx
 exec_always alacritty
 # exec_always i3-sensible-terminal
 
@@ -46,7 +46,8 @@ bindsym XF86AudioMute exec amixer -q set Master mute
 # bindsym XF86AudioPrev exec playerctl previous  
 
 # browsers--firefox
-bindsym $mod+b exec google-chrome-stable
+# bindsym $mod+b exec google-chrome-stable
+bindsym $mod+b exec chromium
 
 # start a terminal
 # i3的脚本，自动选择系统安装的默认终端
@@ -212,27 +213,28 @@ bindsym $mod+r mode "resize"
 # bar toggle, hide or show
 bindsym $mod+m bar mode toggle
 
-# Start i3bar to display a workspace bar (plus the system information i3status
-# finds out, if available)
-bar {
-    #     colors {
-    #     background #2f343f
-    #     statusline #2f343f
-    #     separator #4b5262
-    #
-    #     # colour of border, background, and text
-    #     focused_workspace       #2f343f #bf616a #d8dee8
-    #     active_workspace        #2f343f #2f343f #d8dee8
-    #     inactive_workspace      #2f343f #2f343f #d8dee8
-    #     urgent_workspacei       #2f343f #ebcb8b #2f343f
-    # }
-    # mode hide
-    height 25
-    status_command i3status
-}
+# # Start i3bar to display a workspace bar (plus the system information i3status
+# # finds out, if available)
+# bar {
+#     #     colors {
+#     #     background #2f343f
+#     #     statusline #2f343f
+#     #     separator #4b5262
+#     #
+#     #     # colour of border, background, and text
+#     #     focused_workspace       #2f343f #bf616a #d8dee8
+#     #     active_workspace        #2f343f #2f343f #d8dee8
+#     #     inactive_workspace      #2f343f #2f343f #d8dee8
+#     #     urgent_workspacei       #2f343f #ebcb8b #2f343f
+#     # }
+#     # mode hide
+#     height 25
+#     status_command i3status
+# }
 
 # hide the head title of windoes
-new_window 1pixel
+# new_window 1pixel
+new_window none
 
 # gaps
-gaps inner 4
+gaps inner 8
